fix: align expired tag

--- a/styles/questboost.module.css
+++ b/styles/questboost.module.css
@@ -49,15 +49,12 @@
 
 .issuer {
     display: flex;
-    margin-top: 0.5rem;
-    margin-bottom: 0.25rem;
     /* Auto layout */
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 8px 24px;
     gap: 10px;
-    margin-top: 1rem;
     height: 36px;
     /* Background/600 */
     background: var(--background600);
